--- a/mokepon.html
+++ b/mokepon.html
@@ -7,8 +7,25 @@
 </head>
 <body>
     <h1>Mokepon! 🔥💧🌱</h1>
-    <p>
-        <button>Fuego🔥</button>
-    </p>
+    <section id="mascota">
+        <h2>Elige a tu mascota:</h2>
+        <button>Seleccionar</button>
+    </section>
+    <section id="ataque">
+        <h2>Elige tu ataque:</h2>
+        <p>Tu mascota tiene <span>3</span> vidas</p>
+        <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+        <p>
+            <button>Fuego🔥</button>
+            <button>Agua 💧</button>
+            <button>Tierra 🌱</button>
+        </p>
+    </section>
+    <section id="mensajes">
+        <p>Tu mascota ataco con Fuego, la mascota del enemigo ataco con Tierra - Ganaste 🎉</p>
+    </section>
+    <section id="reiniciar">
+        <button>Reiniciar</button>
+    </section>
 </body>
 </html>
