Funciones para elegir mascotas

--- a/mokepon.html
+++ b/mokepon.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon!</title>
+    <script src="./js/mokepon.js"></script>
 </head>
 <body>
     <h1>Mokepon! 🔥💧🌱</h1>
     <section id="mascota">
         <h2>Elige a tu mascota:</h2>
-        <button>Seleccionar</button>
+        <input type="radio" name="mascota" id="hipodoge"/><label for="hipodoge">Hipodoge</label><br>
+        <input type="radio" name="mascota" id="capipepo"/><label for="capipepo">Capipepo</label><br>
+        <input type="radio" name="mascota" id="ratigueya"/><label for="ratigueya">Ratigueya</label><br>
+        <button id="boton-mascota">Seleccionar</button>
     </section>
     <section id="ataque">
         <h2>Elige tu ataque:</h2>
-        <p>Tu mascota tiene <span>3</span> vidas</p>
-        <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
+        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
         <p>
-            <button>Fuego🔥</button>
-            <button>Agua 💧</button>
-            <button>Tierra 🌱</button>
+            <button id="boton-fuego">Fuego🔥</button>
+            <button id="boton-agua">Agua 💧</button>    
+            <button id="boton-tierra">Tierra 🌱</button>
         </p>
     </section>
     <section id="mensajes">
-        <p>Tu mascota ataco con Fuego, la mascota del enemigo ataco con Tierra - Ganaste 🎉</p>
+        <p>Tu mascota ataco con <span id="ataque-jugador"></span>, la mascota del enemigo ataco con Tierra - Ganaste 🎉</p>
     </section>
     <section id="reiniciar">
-        <button>Reiniciar</button>
+        <button id="boton-reiniciar">Reiniciar</button>
     </section>
 </body>
 </html>
